package seedu.unienable.model.preference;

/** Whether the future recommender may display advisory Pomodoro-style study suggestions. */
public enum TomatoSuggestion {
    /** Advisory suggestions are enabled. */
    ON,
    /** Advisory suggestions are disabled. */
    OFF
}
